tests/ok/match-signed-range-coverage.ari
fn score_i8(value: i8) -> i64 {
  return match value {
    -128..0 => 1,
    0..=127 => 2,
  };
}

fn shadow_i8(value: i8) -> i64 {
  return match value {
    -128..0 => 4,
    0..=127 => 8,
    -1 => 16,
  };
}

fn main() -> i64 {
  return score_i8(-128i8) +
         score_i8(-1i8) +
         score_i8(0i8) +
         score_i8(127i8) +
         shadow_i8(-1i8);
}
