tests/errors/nullable-value-initializer.ari
fn main() -> i64 {
  let value: i64? = 0;
  return 0;
}
